--- a/testing/Grid Inputs/grid_seed_dispersal.in
+++ b/testing/Grid Inputs/grid_seed_dispersal.in
@@ -1,13 +1,5 @@
 # Seed dispersal setup for STEPWAT grid version - DLM 07-29-13.  This file contains constants that are used in seed dispersal.  The rest of the seed dispersal inputs are set up on a species basis in the species input file.
 
-#0.125		# probability that the microenvironmental conditions required for the germination and establishment of B. gracilis seedlings will occur in a given year
-
-#6.5		# minimum biomass that is required for seeds to be produced in g/m2 (49.0 g/m2 in the paper)
-
-#CONSTANTS from the function: Ps = 1.0 - 0.99*exp( C1*(LYPPT-C2))... where Ps is the probability that seeds of B.gracilis are present in the plot and LYPPT is last years precipitation in mm
-#-0.0018953	# C1 in the equation... (-0.0018953 in the paper)
-#105		# C2 in the equation... represents the dryest year in mm (105 in the paper)
-
 #CONSTANTS from the max distance function: MAXD = (H * VW) / VT.  MAXD refers to the maximum distance that a seed can be dispersed to.  If you're MAXD ends up being really small, then you can get kinda weird results, so be careful.
 #30.0		# H - the average release height of the inflorescences (30 cm in the paper)
 500.0		# VW - the mean horizontal wind speed (500 cm/sec in the paper)
@@ -17,3 +9,12 @@
 1		# output seed dispersal (ie. the total probability that a cell received seeds for each cell for each year for each species)?  1 means yes, 0 means no
 1		# output header (ie. the names of all the species)?  1 means yes, 0 means no.  Suggested: yes, as it's hard to figure out what all the numbers mean elsewise.
 t		# output seperator... specify one of the following as a separator: t = tab, s = space, or any single character such as , | : etc (excluding '#','t', and 's').  Suggested: tab.
+
+#Spinup and Seed Availability options
+#NOTE: options 1a, 2a, and Xb are mutually exclusive.  Options 1b and 2b can be combined.  Cells can be empty of plants.
+10		# option 1) number of years N at the beginning of the simulation during which seeds are available for germination.  Input: N years.
+0		# option 1a) all cells and species.  1 means yes, 0 means no.
+0		# option 1b) input for each cell: seeds of which species are available during those first N years [names & order of all species in species.in].  1 means yes, 0 means no.
+# option 2) run one site without dispersal (ie, conditions of 1-site StepWat, ie, seeds available in every cell for every year) for inputted # of years x replications (eg, 500 years times 10 replications) as spinup
+0		# option 2a) use this spinup as init condition in all cells.  1 means yes, 0 means no.
+0		# option 2b) input for each cell whether or not to use this spinup as inits.  1 means yes, 0 means no. 
