--- a/testing/files.in
+++ b/testing/files.in
@@ -8,6 +8,7 @@ Grid Inputs/grid_setup.in		# name of grid setup file
 Grid Inputs/grid_disturbances.csv	# name of grid disturbances input file
 Grid Inputs/grid_soils.csv		# name of grid soils input file
 Grid Inputs/grid_seed_dispersal.in	# name of grid seed dispersal setup file
+Grid Inputs/grid_initSpecies.csv	# name of grid species input file
 
 files.in				# name of stepwat files.in file
 
