--- a/testing/Stepwat Inputs/Input/sxw/sxwroots.in
+++ b/testing/Stepwat Inputs/Input/sxw/sxwroots.in
@@ -1,7 +1,9 @@
 # Rooting distributions for STEPWAT
 # Distributions must sum to one for each group
 # Be sure these data are consistent with the SOILWAT
-# layer definitions for transpiration
+# layer definitions for transpiration (i.e. number of layers
+# that roots occupy must match the number of soil layers where
+# transpiration occurs in soils_v23.in)
 
 #GrpName       %L1   %L2    %L3    %L4    %L5     %L6
 bouteloua       .2     .5    .2     .1
