--- a/testing/Stepwat Inputs/Input/mortflags.in
+++ b/testing/Stepwat Inputs/Input/mortflags.in
@@ -4,6 +4,10 @@
 # Anything after the first pound sign is a comment
 # Blank lines, white space, and comments may be used freely,
 # however, the order of input is important
+# This file outputs the number of individuals killed by resource
+# group and species (if specified) by age class (how old they were).
+# Estabs (first row of output) is the number of individuals that got
+# established across all years of the simulation. 
 
 # sumry yearly head  sep   group  species
   y       n       y    t     y     y
