further description of what is contained in mortality output file

--- a/testing/Stepwat Inputs/Input/mortflags.in
+++ b/testing/Stepwat Inputs/Input/mortflags.in
@@ -6,6 +6,10 @@
 # however, the order of input is important
 # This file outputs the number of individuals killed by resource
 # group and species (if specified) by age class (how old they were).
+# It is not how many individuals were killed in each year of the simulation.
+# Instead, this file summarizes how many individuals were killed at 1 year old,
+# 2 years old, etc. However, the number of rows in this output files corresponds
+# to how many years the simulation was run. Do not let this confuse you.
 # Estabs (first row of output) is the number of individuals that got
 # established across all years of the simulation. 
 
