--- a/testing/Stepwat Inputs/Input/species.in
+++ b/testing/Stepwat Inputs/Input/species.in
@@ -52,20 +52,14 @@
 #
 #
 # name     rg  age  irate    ratep slow disturb pestab     eind minbio  maxbio  clonal vegindv tclass  cosurv  onoff
- bogr       1    0  0.47400 0.900    2       2    0.12500    2   0.605  12.096      y       3       1  0.0100     1 	
- arpu       2   75  0.47400 0.900    2       2    0.17000    5   0.153   3.055      n       3       1  0.0100     1 
- cahe       2   75  0.47400 0.900    2       2    0.12000    5   0.070   1.399      y       3       2  0.0100     1 
- sihy       2   10  0.73700 0.900    2       3    0.19000    5   0.153   3.055      n       0       2  0.0100     1 
- scpa       2   10  0.73700 0.900    2       2    0.01000    5   0.153   3.055      n       0       1  0.0100     1 
- spco       3   35  0.47400 0.900    2       2    0.01500    5   0.035   0.707      y       3       2  0.0100     1 
- piop       3   35  0.47400 0.900    2       2    0.00100    5   0.106   0.707      n       0       1  0.0100     1 
- mata       3   10  0.73700 0.900    2       2    0.06000    5   0.022   0.429      n       0       1  0.0100     1 
- gaco       3   10  0.73700 0.900    2       2    0.01100    5   0.022   0.429      n       0       2  0.0100     1 
- gusa       3   10  0.73700 0.900    2       3    0.00100    5   0.106   2.126      n       0       2  0.0100     1 
- vuoc       4    1  0.94700 0.900    2       1    0.27000    2   0.022   0.429      n       0       2  0.0000     1 
- chal       4    1  0.94700 0.900    2       2    0.27000    2   0.022   0.429      n       0       1  0.0000     1 
- lede       4    1  0.94700 0.900    2       2    0.27000    2   0.022   0.429      n       0       2  0.0000     1 
- oppo       5    0  0.28900 0.900    2       4    0.02000    3   0.020  15.000      y       3       1  0.0100     1 
+ PGC        1   75  0.47400 0.900    2       2    0.12500    2   0.500   12.00      y       3       2  0.0100     1 	
+ PGW	    2   75  0.47400 0.900    2       2    0.12500    2   0.605   12.00      y       3       1  0.0100     1 
+ AGC        3    1  0.94700 0.900    2       2    0.10000    2   0.020   1.000      n       0       2  0.0100     1 
+ AGW        4    1  0.94700 0.900    2       2    0.10000    2   0.020   0.500      n       0       1  0.0100     1 
+ SHRUB      5   100 0.40000 0.900    2       2    1.00000    1   2.000   100.0      n       0       2  0.0100     1 
+ FORC       6   35  0.42600 0.900    2       2    1.00000    3   0.035   0.707      n       0       2  0.0100     1 
+ FORW       7   35  0.42600 0.900    2       2    0.01500    3   0.035   0.707      n       0       1  0.0100     1 
+ succulents 7   35  0.42600 0.900    2       2    0.01500    3   0.035   0.707      n       0       1  0.0100     1 
 
 [end]  # this marks the end of the species-specific parameters above
 
@@ -77,9 +71,8 @@
 # xdecay = decay exponent.  indivs established = SUM(1/seed_age^xdecay)
 #
 # name     viable xdecay 
- vuoc        10    1.00
- chal        10    1.00
- lede        10    1.00
+ AGC        10    1.00
+ AGW        10    1.00
 
 [end]  # end of additional annuals-only parameters.
 
@@ -97,21 +90,14 @@
 # vprop4 = probability if disturbance
 #
 # name     vprop1 vprop2 vprop3 vprop4
- bogr     0.7500 0.9000 0.9000 0.9000
- arpu     0.7500 0.9000 0.9000 0.9000
- cahe     0.7500 0.9000 0.9000 0.9000
- sihy     0.7500 0.9000 0.9000 0.9000
- scpa     0.7500 0.9000 0.9000 0.9000
- spco     0.7500 0.9000 0.9000 0.9000
- piop     0.7500 0.9000 0.9000 0.9000
- mata     0.7500 0.9000 0.9000 0.9000
- gaco     0.7500 0.9000 0.9000 0.9000
- gusa     0.7500 0.9000 0.9000 0.9000
- vuoc     0.7500 0.9000 0.9000 0.9000
- chal     0.7500 0.9000 0.9000 0.9000
- lede     0.7500 0.9000 0.9000 0.9000
- oppo     0.7500 0.9000 0.9000 0.9000
-
+ PGC     0.7500 0.9000 0.9000 0.9000
+ PGW     0.7500 0.9000 0.9000 0.9000
+ AGC     0.7500 0.9000 0.9000 0.9000
+ AGW     0.7500 0.9000 0.9000 0.9000
+ SHRUB   0.7500 0.9000 0.9000 0.9000
+ FORC    0.7500 0.9000 0.9000 0.9000
+ FORW    0.7500 0.9000 0.9000 0.9000
+ succulents 0.7500 0.9000 0.9000 0.9000
 [end]  # this marks the end of the veg-prop parameters
 
 # ===============================================================================
@@ -130,19 +116,12 @@
 # VT = the average sinking velocity of the seeds (cm/sec)
 #
 # name 	dispersal	param1	PPTdry	PPTwet	Pmin	Pmax	H	VT
- bogr	1		0.9	105	520	0.01	0.55	30.0	100.0 
- arpu 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- cahe 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- sihy 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- scpa 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- spco 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- piop 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- mata 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- gaco 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- gusa 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- vuoc 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- chal 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- lede 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- oppo 	1		0.5	105	520	0.01	0.55	30.0	100.0 
-
+ PGC	1		0.9	105	520	0.01	0.55	30.0	100.0 
+ PGW 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+ AGC 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+ AGW 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+ SHRUB 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+ FORC 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+ FORW 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+ succulents 	1		0.5	105	520	0.01	0.55	30.0	100.0 
 [end]	# this marks the end of the seed-dispersal parameters
