--- a/testing/Stepwat Inputs/Input/sxw/sxwphen.in
+++ b/testing/Stepwat Inputs/Input/sxw/sxwphen.in
@@ -14,9 +14,10 @@
 # All the activity values for a group must sum to 100
 
 # Group        Jan  Feb  Mar  Apr  May  Jun  Jul  Aug  Sep   Oct  Nov  Dec
-bouteloua      .00  .00  .00  .05  .15  .40  .20  .15  .05  .00  .00   .00
-p.graminoids   .00  .00  .00  .05  .15  .40  .20  .15  .05  .00  .00   .00
-p.forb/shrub   .00  .00  .02  .03  .20  .30  .20  .15  .07  .03  .00   .00
-a.gram/shrub   .00  .00  .03  .07  .40  .30  .15  .05  .00  .00  .00   .00   
-succulents     .00  .00  .05  .10  .15  .17  .18  .15  .10  .10  .00   .00    
-
+PGC	       .025 .07  .15  .20  .25  .20  .075 .00  .00  .00  .012  .0125
+PGW	       .00  .00  .00  .05  .15  .40  .20  .15  .05  .00  .00   .00
+AGC	       .05  .10  .15  .20  .30  .05  .00  .00  .00  .05  .05   .05
+AGW	       .00  .00  .05  .10  .25  .35  .15  .10  .00  .00  .00   .00   
+SHRUB	       .012 .012 .10  .125 .15  .25  .15  .10  .062 .012 .012  .012
+FORC	       .00  .05  .10  .20  .30  .15  .10  .05  .025 .025 .00   .00
+FORW           .00  .00  .00  .10  .25  .35  .20  .10  .00  .00  .00   .00
