--- a/testing/Stepwat Inputs/Input/sxw/sxwroots.in
+++ b/testing/Stepwat Inputs/Input/sxw/sxwroots.in
@@ -4,9 +4,11 @@
 # layer definitions for transpiration
 
 #GrpName       %L1   %L2    %L3    %L4    %L5     %L6
-bouteloua       .2     .5    .2     .1
-p.graminoids    .2     .5    .2     .1
-p.forb/shrub    .1     .1    .2     .2     .4
-a.gram/shrub    .5     .3    .2
-succulents      1.0
+PGC       	       .2     .35   .25    .15	  .05     
+PGW    		       .2     .5    .2     .1	  
+AGC    		       .35    .275  .15    .125   .1
+AGW    		       .3     .4    .2     .1
+SHRUB      	.05    .2    .25    .25	   .15	  .1
+FORC		       .05    .2    .4	   .3	  .05
+FORW		       .15    .3    .35	   .2
 
