--- a/testing/Stepwat Inputs/Input/species.in
+++ b/testing/Stepwat Inputs/Input/species.in
@@ -60,7 +60,8 @@
  spco       3   35  0.47400 0.900    2       2    0.01500    5   0.035   0.707      y       3       2  0.0100     1 
  piop       3   35  0.47400 0.900    2       2    0.00100    5   0.106   0.707      n       0       1  0.0100     1 
  mata       3   10  0.73700 0.900    2       2    0.06000    5   0.022   0.429      n       0       1  0.0100     1 
- gaco       3   10  0.73700 0.900    2       2    0.01100    5   0.022   0.429      n       0       2  0.0100     1 
+ gaco       3   10  0.73700 0.900    2       2    0.01100    5   0.022   0.429      n       0       2  0.0100     1
+ chna       3   35  0.47400 0.900    2 	     2 	  0.00200    2   0.986   19.726     n       0       2  0.0100     1
  gusa       3   10  0.73700 0.900    2       3    0.00100    5   0.106   2.126      n       0       2  0.0100     1 
  vuoc       4    1  0.94700 0.900    2       1    0.27000    2   0.022   0.429      n       0       2  0.0000     1 
  chal       4    1  0.94700 0.900    2       2    0.27000    2   0.022   0.429      n       0       1  0.0000     1 
@@ -106,6 +107,7 @@
  piop     0.7500 0.9000 0.9000 0.9000
  mata     0.7500 0.9000 0.9000 0.9000
  gaco     0.7500 0.9000 0.9000 0.9000
+ chna     0.7500 0.9000 0.9000 0.9000
  gusa     0.7500 0.9000 0.9000 0.9000
  vuoc     0.7500 0.9000 0.9000 0.9000
  chal     0.7500 0.9000 0.9000 0.9000
@@ -138,7 +140,8 @@
  spco 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  piop 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  mata 	1		0.5	105	520	0.01	0.55	30.0	100.0 
- gaco 	1		0.5	105	520	0.01	0.55	30.0	100.0 
+ gaco 	1		0.5	105	520	0.01	0.55	30.0	100.0
+ chna   1 		0.5 	105 	520 	0.01 	0.55 	30.0 	100.0 
  gusa 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  vuoc 	1		0.5	105	520	0.01	0.55	30.0	100.0 
  chal 	1		0.5	105	520	0.01	0.55	30.0	100.0 
