--- a/testing/Stepwat Inputs/Input/sxw/sxwroots.in
+++ b/testing/Stepwat Inputs/Input/sxw/sxwroots.in
@@ -8,7 +8,7 @@
 #GrpName       %L1   %L2    %L3    %L4    %L5     %L6
 bouteloua       .2     .5    .2     .1
 p.graminoids    .2     .5    .2     .1
-p.forb/shrub    .1     .1    .2     .2     .4
+p.forb/shrub    .1     .1    .2     .2     .3	  .1
 a.gram/shrub    .5     .3    .2
 succulents      1.0
 
