--- a/testing/Stepwat Inputs/Input/rgroup.in
+++ b/testing/Stepwat Inputs/Input/rgroup.in
@@ -19,7 +19,7 @@
 # name = a name to give the group (12 chars)
 # space = proportion of the resource space used by the group.
 #         this must sum to 1.0
-# density = relative number of mature individuals per plot
+# density = relative number of mature individuals per plot, reassigned to max_density in the model code
 # maxest = maximum species that can establish in a given year, 
 #          this value cannot be greater than the number of species assigned 
 #          to the resource group in the species.in file
