--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,43 @@
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+ 
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+ 
+# Logs and databases #
+######################
+*.log
+*.sql
+*.sqlite
+ 
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
 *~		#ignore files ending in ~ (vim likes to write these, but we don't need to commit them)
 *.swp		#ignore .swp files (vim also likes to write these)
-*.dll
 
 #some special cases of things to ignore
 testing_shortegrass/
