--- a/testing/Stepwat Inputs/Input/sxwdebug.in
+++ b/testing/Stepwat Inputs/Input/sxwdebug.in
@@ -1,5 +1,5 @@
 #sxwdebug.in, for debugging STEPPEWAT... this file is completely optional - DLM: 08-01-12
 #must specify if you want to use via something like './stepwat -f files.in -ssxwdebug.in -q -e'.  There can't be a space between the -s and the name of the debug inputfile for some reason...
 
-Output/sxwdebug.out #name of file to write debug info to
+Output/sxwdebug #name of file to write debug info to .out will be added.
 1997 1998 1999 2000 2001 2002 2003 2015 2020 2025 2030 2035 2040 2042 # 4-digit years to write output (see years.in), limit of 100, can be a multi-line continuation
