--- a/testing/Stepwat Inputs/Input/sxw/files_v30.in
+++ b/testing/Stepwat Inputs/Input/sxw/files_v30.in
@@ -11,7 +11,7 @@ Input/soils_v30.in	# soil layer definitions
 
 #Weather
 Input/weathsetup_v20.in	# weather parameters
-Input/randomdata/weath	# data file containing historical weather (can include path)
+Input/sxw/Input/randomdata/weath	# data file containing historical weather (can include path)
 Input/randomdata/mkv_prob.in	# precip probs; required for markov weather
 Input/randomdata/mkv_covar.in	# covariance table required for markov weather
 Input/randomdata/cloud_v20.in	# general atmospheric params
