Changed root layers to match soils
Also removed unnecessary rgroups (succulents)

--- a/testing.sagebrush.bradford/Stepwat Inputs/Input/sxw/sxwroots.in
+++ b/testing.sagebrush.bradford/Stepwat Inputs/Input/sxw/sxwroots.in
@@ -3,12 +3,12 @@
 # Be sure these data are consistent with the SOILWAT
 # layer definitions for transpiration
 
-#GrpName       %L1   %L2    %L3    %L4    %L5     %L6
-PGC       		.20    .35   .25    .15	   .05     .00
-PGW    			.20    .50   .20    .10	   .00	   .00
-AGC    			.35    .275  .15    .125   .10	   .00
-AGW    			.30    .40   .20    .10	   .00	   .00
-SHRUB      		.05	   .20	 .25	.25	   .15	   .10
-FORC			.05    .20	 .40	.30	   .05	   .00
-FORW			.15    .30	 .35	.20	   .00	   .00
+#GrpName       %L1   %L2    %L3    %L4    %L5     %L6	%L7	%L8	%L9
+PGC       		.20    .35   .25    .15	   .05     .00	.00	.00	.00
+PGW    			.20    .50   .20    .10	   .00	   .00	.00	.00	.00
+AGC    			.35    .275  .15    .125   .10	   .00	.00	.00	.00
+AGW    			.30    .40   .20    .10	   .00	   .00	.00	.00	.00
+SHRUB      		.05	   .20	 .25	.25	   .15	   .10	.00	.00	.00
+FORC			.05    .20	 .40	.30	   .05	   .00	.00	.00	.00
+FORW			.15    .30	 .35	.20	   .00	   .00	.00	.00	.00
 
