--- a/testing.sagebrush.bradford/Stepwat Inputs/Input/rgroup.in
+++ b/testing.sagebrush.bradford/Stepwat Inputs/Input/rgroup.in
@@ -56,7 +56,6 @@
  SHRUB		      0.350  0.350     1    0.0500       2     1       0   1      1       0        0       0     0  0.00000   2
  FORC			  0.050	 0.050	   1	0.0500		 2	   1	   0   1	  1	   	  0		   0	   0	 0	0.00000   4		
  FORW			  0.025	 0.020	   1	0.0500		 2	   1	   0   1	  1	      0		   0	   0	 0  0.00000   4
- succulents		  0.025	 0.020	   1	0.0500		 2	   1	   0   1	  1	      0		   0	   0	 0  0.00000   2
 [end]  # section end
 
 
@@ -91,7 +90,7 @@
 # gint   = intercept ''     ''      ''
 
 # name            gslope  gint  mslope  gint 
-	succulents    -0.0025 0.776 -0.0217 6.736			
+	FORC    0 0 0 0			
 
 [end]  # section end     
 
