--- a/testing.shortgrass.bradford/Input/sxw/sxwroots.in
+++ b/testing.shortgrass.bradford/Input/sxw/sxwroots.in
@@ -3,12 +3,12 @@
 # Be sure these data are consistent with the SOILWAT
 # layer definitions for transpiration
 
-#GrpName        %L1   %L2    %L3    %L4    %L5     %L6	%L7	%L8	%L9
-PGC       		.2     .35   .25    .15	   .05     0.0	0.0	0.0	0.0
-PGW    			.2     .5    .2     .1	  0.0	   0.0	0.0	0.0	0.0
-AGC    			.35    .275  .15    .125   .1	   0.0	0.0	0.0	0.0	
-AGW    			.3     .4    .2     .1	  0.0	   0.0	0.0	0.0	0.0	
-SHRUB      		.05	   .2	 .25	.25	   .15	   0.1	0.0	0.0	0.0
-FORC			.05    .2	 .4		.3	   .05	   0.0	0.0	0.0	0.0
-FORW			.15    .3	 .35	.2	  0.0	   0.0	0.0	0.0	0.0	
+#GrpName        %L1   %L2    %L3    %L4    %L5     %L6
+PGC       		.2     .35   .25    .15	   .05     0.0
+PGW    			.2     .5    .2     .1	  0.0	   0.0
+AGC    			.35    .275  .15    .125   .1	   0.0
+AGW    			.3     .4    .2     .1	  0.0	   0.0
+SHRUB      		.05	   .2	 .25	.25	   .15	   0.1
+FORC			.05    .2	 .4		.3	   .05	   0.0
+FORW			.15    .3	 .35	.2	  0.0	   0.0
 
