Added comment about transpiration regions
Added comment to clarify that the layers that correspond to each
transpiration region apply to all veg types in SOILWAT

--- a/testing/Stepwat Inputs/Input/sxw/Input/siteparam_v26.in
+++ b/testing/Stepwat Inputs/Input/sxw/Input/siteparam_v26.in
@@ -66,7 +66,7 @@
 # ---- Transpiration regions ----
 # ndx  : 1=shallow, 2=medium, 3=deep, 4=very deep
 # layer: deepest layer number of the region. 
-# Grasses	Shrubs		Trees		Forbs
+# these layers and transpiration regions are used for all veg types (grasses, shrubs, forbs, trees)
 #        Layers are defined in soils.in.
 # ndx    layer
 	1	3
