Added a new part to sxwprod.in to help with biomass. Capped PR to 10. Large PR happens when very small amounts of transp happen. Adjusted the test file to have higher biomass/transp ratio.

--- a/testing/Stepwat Inputs/Input/sxw.in
+++ b/testing/Stepwat Inputs/Input/sxw.in
@@ -4,5 +4,5 @@
 Input/sxw/sxwroots.in		#roots
 Input/sxw/sxwphen.in		#phen
 Input/sxw/sxwbvt.in			#bvt
-Input/sxw/sxwprod.in		#prod
+Input/sxw/sxwprod_v2.in		#prod
 Input/sxw/files_v30.in	#soilwat files.in
