--- a/testing.sagebrush.MT/Stepwat Inputs/Input/sxw/sxwroots.in
+++ b/testing.sagebrush.MT/Stepwat Inputs/Input/sxw/sxwroots.in
@@ -2,13 +2,16 @@
 # Distributions must sum to one for each group
 # Be sure these data are consistent with the SOILWAT
 # layer definitions for transpiration
+# Note, need to change values for shrub, and forbs
 
 #GrpName       %L1   %L2    %L3    %L4    %L5     %L6
-PGC       		.20    .35   .25    .15	   .05     .00
-PGW    			.20    .50   .20    .10	   .00	   .00
-AGC    			.35    .275  .15    .125   .10	   .00
-AGW    			.30    .40   .20    .10	   .00	   .00
-SHRUB      		.05	   .20	 .25	.25	   .15	   .10
-FORC			.05    .20	 .40	.30	   .05	   .00
-FORW			.15    .30	 .35	.20	   .00	   .00
-
+sagebrush      	.05	   .20	 .25	.25	   .15	   .10
+a.cool.forb		.15    .30	 .35	.20	   .00	   .00
+a.warm.forb		.15    .30	 .35	.20	   .00	   .00
+p.cool.forb		.05    .20	 .40	.30	   .05	   .00
+p.warm.forb		.15    .30	 .35	.20	   .00	   .00
+a.cool.grass    .35    .275  .15    .125   .10	   .00
+a.warm.grass    .30    .40   .20    .10	   .00	   .00
+p.cool.grass    .20    .35   .25    .15	   .05     .00
+p.warm.grass 	.20    .50   .20    .10	   .00	   .00
+shrub			.15    .30	 .35	.20	   .00	   .00
