--- a/testing.sagebrush.MT/Stepwat Inputs/Input/sxw/Input/soils_v30.in
+++ b/testing.sagebrush.MT/Stepwat Inputs/Input/sxw/Input/soils_v30.in
@@ -12,9 +12,15 @@
 # soiltemp = the initial temperature of each soil layer (in celcius), from the day before the simulation starts
 # Note that the evco and trco columns must sum to 1.0 or they will
 # be normalized.
-#
+# Soil texture data for 3 top layers from Trace's MT data. Rest of soil texture from STATSGO.
+# Note: matricd, evco, soil temp for all soil layers from Bradford & Lauenroth 2006 Appendix.
+
 # depth    matricd    gravel_content    evco    trco_grass    trco_shrub    trco_tree    trco_forb    %sand    %clay    imperm    soiltemp
  10.000      1.430      0.000          0.500         0.100         0.100        0.100        0.100    0.450    0.18     0.000       0.186
  20.000      1.410      0.000          0.350         0.250         0.250        0.250        0.250    0.480    0.19     0.000       0.372
  30.000      1.390      0.000          0.150         0.300         0.300        0.300        0.300    0.530    0.16     0.000       0.744
-
+ 40.000      1.390      0.000          0.000         0.200         0.200        0.200        0.200                      0.000       1.116
+ 60.000      1.380      0.000          0.000         0.100         0.100        0.100        0.100                      0.000       1.488
+ 80.000      1.150      0.000          0.000         0.050         0.050        0.050        0.050                      0.000       2.232
+ 100.00      1.310      0.000          0.000         0.000         0.000        0.000        0.000                      0.000       2.975
+ 150.00      1.310      0.000          0.000         0.000         0.000        0.000        0.000                      0.000       2.975
